--- a/.luarc.json
+++ b/.luarc.json
@@ -2,7 +2,8 @@
     "diagnostics.globals": [
         "vim",
         "describe",
-        "it"
+        "it",
+        "before_each"
     ],
     "diagnostics.disable": [
         "undefined-field"
