--- a/.github/workflows/semantic-relase.yml
+++ b/.github/workflows/semantic-relase.yml
@@ -16,34 +16,9 @@ permissions:
   pull-requests: read
 
 jobs:
-  run-tests:
-    name: Run Tests
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Install Dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y lua5.1 luarocks neovim
-
-      - name: Install Busted
-        run: |
-          luarocks install --local busted
-
-      - name: Add LuaRocks binaries to PATH
-        run: echo "${HOME}/.luarocks/bin" >> $GITHUB_PATH
-
-      - name: Run tests
-        run: ./run_tests.sh
-
   semantic-commit-linter:
     name: Validate PR title
     runs-on: ubuntu-latest
-    needs: run-tests
     permissions:
       contents: write
       issues: write
@@ -72,6 +47,32 @@ jobs:
         run: npx semantic-release --dry-run
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  run-tests:
+    name: Run Tests
+    runs-on: ubuntu-latest
+    needs: semantic-commit-linter
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Install Dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y lua5.1 luarocks neovim
+
+      - name: Install Busted
+        run: |
+          luarocks install --local busted
+
+      - name: Add LuaRocks binaries to PATH
+        run: echo "${HOME}/.luarocks/bin" >> $GITHUB_PATH
+
+      - name: Run tests
+        run: ./run_tests.sh
+
 
   semantic-release:
     name: Semantic Release
