--- a/.github/workflows/semantic-relase.yml
+++ b/.github/workflows/semantic-relase.yml
@@ -77,7 +77,7 @@ jobs:
   semantic-release:
     name: Semantic Release
     runs-on: ubuntu-latest
-    needs: semantic-commit-linter
+    needs: run-tests
     permissions:
       contents: write
       issues: write
