--- a/.github/workflows/semantic-relase.yml
+++ b/.github/workflows/semantic-relase.yml
@@ -57,19 +57,15 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
       - name: Install Dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y lua5.1 luarocks neovim
-
       - name: Install Busted
         run: |
           luarocks install --local busted
-
       - name: Add LuaRocks binaries to PATH
         run: echo "${HOME}/.luarocks/bin" >> $GITHUB_PATH
-
       - name: Run tests
         run: ./run_tests.sh
 
@@ -77,7 +73,7 @@ jobs:
   semantic-release:
     name: Semantic Release
     runs-on: ubuntu-latest
-    needs: semantic-commit-linter
+    needs: run-tests
     permissions:
       contents: write
       issues: write
