--- a/.github/workflows/semantic-relase.yml
+++ b/.github/workflows/semantic-relase.yml
@@ -20,10 +20,10 @@ jobs:
     name: Validate PR title
     runs-on: ubuntu-latest
     permissions:
-      contents: write
-      issues: write
-      pull-requests: write
-      id-token: write
+      contents: read
+      issues: read
+      pull-requests: read
+      id-token: none
     steps:
       - name: Checkout
         uses: actions/checkout@v4
